# ping

./: .gitignore  Cargo.toml  justfile
common/: Cargo.toml
common/src/: address.rs  block.rs  channel.rs  lib.rs  space.rs  transport.rs
crates/common/: Cargo.toml
crates/common/src/: channel.rs  lib.rs  transport.rs
crates/node/: Cargo.toml
crates/node/src/: connection.rs  node.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: identity.rs  lib.rs
crates/web/: Cargo.toml  index.html
crates/web/src/: main.rs  net.rs  presense.rs  route.rs  space.rs  view.rs
crates/web/src/view/: presense.rs  sidebar.rs  space.rs
node/: Cargo.toml
node/src/: client.rs  connection.rs  main.rs  node.rs
web/: Cargo.toml  index.html
web/src/: main.rs  net.rs  space.rs  store.rs
web/src/view/: sidebar.rs  space.rs
