[package]
name = "common"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"

[dependencies]
bincode = "1.3.2"
serde = { version = "1.0.124", features = ["derive", "rc"] }
anyhow = "1.0.38"
sha3 = "0.9.1"
generic-array = { version = "0.14.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
