[package]
name = "node"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
wactor = { git = "https://github.com/intendednull/wactor.git" }
lunatic = { git = "https://github.com/lunatic-solutions/rust-lib.git" }
serde = "1.0.124"
tungstenite = { version = "0.13.0", default-features = false }
bincode = "1.3.2"
log = "0.4.14"
env_logger = "0.8.3"
