[package]
name = "web"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
log = "0.4.14"
console_error_panic_hook = "0.1.6"
wasm-logger = "0.2.0"
anyhow = "1.0.38"
serde = "1.0.124"
getrandom = { version = "0.2.6", features = ["js"] }
