[package]
name = "common"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bincode = "1.3.2"
generic-array = { version = "0.14.4", features = ["serde"] }
serde = { version = "1.0.124", features = ["derive", "rc"] }
sha3 = "0.9.1"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
