[package]
name = "node"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.2"
common = { path = "../common" }
env_logger = "0.8.3"
log = "0.4.14"
lunatic = { git = "https://github.com/lunatic-solutions/rust-lib.git" }
serde = "1.0.124"
slab = "0.4.2"
tungstenite = { version = "0.13.0", default-features = false }
