[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
libp2p = { version = "0.44.0", default-features = false, features = ["wasm-bindgen", "serde", "libp2p-identify"]}
serde = "1.0.124"
thiserror = "1.0.30"
